--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,23 @@ body {
   padding: 18px 35px 19px 36px;
 }
 
+.section-title{
+    color:#181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description{
+    /* max-width: 827px; */
+    color:#757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+
+}
+
 /*header related styles*/
 .header{
     background-color: #FFF8F3;
@@ -94,4 +111,15 @@ nav li a {
   color: #181818;
   font-size: 45px;
   font-weight: 800;
+}
+
+/*main section styles */
+
+/*about section styles */
+.about{
+    padding:130px;
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    margin: 130px 0;
+
 }
