--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -115,11 +115,43 @@ nav li a {
 
 /*main section styles */
 
+main{
+    max-width: 1140px;
+    /*margin-left: 130px;  /*can manually add margin to the left*/
+    margin: 0 auto;  /*duipashe emne margin dibe jeno centre e chole ashe*/
+}
+
 /*about section styles */
+
 .about{
     padding:130px;
     background-color: #FFF8F3;
     border-radius: 10px;
     margin: 130px 0;
 
+}
+
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info{
+    text-align: center;
+    
+}
+
+.info-title{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 0px;
+
+}
+
+.info-description{
+    font-size: 20px;
+    color:#474747;
+    font-weight: 800;
+    margin-top: 10px;
 }
