--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -155,3 +155,15 @@ main{
     font-weight: 800;
     margin-top: 10px;
 }
+
+
+
+/*what I do section styles*/
+
+#whatIdoDesc{
+    padding:30px 150px;
+}
+
+.skills-container{
+    display: flex;
+}
