--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -121,6 +121,10 @@ main{
     margin: 0 auto;  /*duipashe emne margin dibe jeno centre e chole ashe*/
 }
 
+main section{
+    margin-top:130px;
+}
+
 /*about section styles */
 
 .about{
@@ -166,4 +170,35 @@ main{
 
 .skills-container{
     display: flex;
+    gap:24px;     /*display flex er functionality ekta gap deya? main container ta display flex kore egula pashe anse, so gap use kora gese*/
+     
+}
+
+.skill{
+
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    background: #FFF;
+    /* margin-right: 24px; */
+}
+
+.skill-title{
+    color: #181818;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.skill-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+
+}
+
+/*Resume section styles */
+.resume-column-title{
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
 }
