--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -202,3 +202,40 @@ main section{
     font-size: 30px;
     font-weight: 700;
 }
+
+.resume-container{
+    display: flex;
+    gap:24px;
+}
+
+.resume-item{
+    margin-right: 71px;
+}
+
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-institute{
+    color:#757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top:0px;
+    margin-bottom:20px;
+}
+
+.resume-item-description{
+    color:#757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-top: 0px;
+    margin-bottom: 50px;
+}
+
+.download-cv{
+    text-align: center;     /*can be used in a div, direct div chara button boshale kaaj kore na*/
+}
