--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -39,9 +39,9 @@ body {
 /*header related styles*/
 .header{
     background-color: #FFF8F3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;    /* y axis position first, x axis position then*/
+    background-position: bottom right, top left;    /* y axis position first, x axis position then*/
 }
 
 .banner{
